--- a/HTML&CSS/Training/04/01.html
+++ b/HTML&CSS/Training/04/01.html
@@ -14,11 +14,16 @@
         position: static;
       }
 
-      .wrpa > div:nth-child(2) {
+      .wrap > div:nth-child(2) {
         color: red;
         position: relative;
         top: 40px;
         left: 40px;
+      }
+      .wrap > div:nth-child(1) {
+        position: absolute;
+        top: 20px;
+        left: 10px;
       }
     </style>
   </head>
